--- a/SaladDay/Recruit_321cqu/src/main/resources/application.yml
+++ b/SaladDay/Recruit_321cqu/src/main/resources/application.yml
@@ -7,11 +7,13 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/recruit?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: PASSword1224
+    username:
+    password:
   aop:
     auto: true
-
+  redis:
+    port: 6379
+    host: localhost
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
